--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "CRUD-Node-PostgreSQL",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:jaimeAlorg/CRUD-Node-PostgreSQL.git",
-  "author": "jaime <jaime.alorg1998@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "pg": "^8.7.3"
-  }
+    "name": "CRUD-Node-PostgreSQL",
+    "version": "1.0.0",
+    "main": "index.js",
+    "repository": "git@github.com:jaimeAlorg/CRUD-Node-PostgreSQL.git",
+    "author": "jaime <jaime.alorg1998@gmail.com>",
+    "license": "MIT",
+    "scripts": {
+        "start": "nodemon index.js"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "pg": "^8.7.3"
+    }
 }
